[project]
name = "redis-api"
version = "0.1.0"
description = "API de cotação de moedas com cache Redis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",  # framework web
    "httpx>=0.27.0",               # cliente HTTP para chamadas externas
    "redis>=5.0.0",                # cliente Redis
    "pydantic-settings>=2.0.0",    # leitura de variáveis de ambiente
]

[tool.ruff]
line-length = 88  # limite de caracteres por linha (padrão black/pep8)

[tool.ruff.lint]
select = [
    "E",   # erros de estilo (pep8)
    "F",   # erros do pyflakes (imports não usados, etc)
    "I",   # ordenação de imports
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]
